# OpenSynapse

./: CLAUDE.md  Cargo.toml  README.md
crates/foreground-watcher-x11/: Cargo.toml
crates/foreground-watcher-x11/src/: lib.rs
crates/openrazer-adapter/: Cargo.toml
crates/openrazer-adapter/src/: adapter.rs  error.rs  lib.rs  proxy.rs
crates/opensynapse-core/: Cargo.toml
crates/opensynapse-core/src/: adapter.rs  error.rs  id.rs  lib.rs  spec.rs
crates/opensynapse-daemon/: Cargo.toml
crates/opensynapse-daemon/src/: bootstrap.rs  config.rs  engine.rs  main.rs
docs/: adapter-traits.md  profile-schema.md  roadmap.md  spikes.md
docs/adr/: 0001-userspace-first.md  0002-orchestrator-not-driver.md  0003-profile-model.md  0004-adapter-contract.md
docs/research/: 2026-04-25-linux-razer-landscape.md
docs/status/: 2026-04-25.md
