[workspace]
members = [
    "crates/opensynapse-core",
    "crates/openrazer-adapter",
    "crates/foreground-watcher-x11",
    "crates/opensynapse-daemon",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/andres-salinas/OpenSynapse"
rust-version = "1.85"
