[package]
name = "foreground-watcher-x11"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Implementación X11 del trait ForegroundWatcher (vía _NET_ACTIVE_WINDOW)."

[dependencies]
opensynapse-core = { path = "../opensynapse-core" }
x11rb = { version = "0.13", default-features = false, features = ["allow-unsafe-code"] }
tokio = { version = "1", features = ["macros", "rt", "sync"] }
async-trait = "0.1"
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
anyhow = "1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[[bin]]
name = "fg-watch"
path = "src/bin/fg-watch.rs"
