[package]
name = "openrazer-adapter"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Read-only adapter over openrazer DBus, used by OpenSynapse."

[dependencies]
zbus = { version = "5", default-features = false, features = ["tokio"] }
tokio = { version = "1", features = ["macros", "rt"] }
thiserror = "2"
anyhow = "1"

[[bin]]
name = "openrazer-probe"
path = "src/bin/openrazer-probe.rs"
