[package]
name = "opensynapse-core"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Traits, specs y tipos compartidos por todos los adapters de OpenSynapse."

[dependencies]
async-trait = "0.1"
thiserror = "2"
futures-core = "0.3"
