[package]
name = "opensynapse-daemon"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Daemon que orquesta foreground watcher + adapters según perfiles en disco."

[dependencies]
opensynapse-core = { path = "../opensynapse-core" }
openrazer-adapter = { path = "../openrazer-adapter" }
foreground-watcher-x11 = { path = "../foreground-watcher-x11" }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "signal", "sync"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
toml = "0.9"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
directories = "5"

[[bin]]
name = "opensynapsed"
path = "src/main.rs"
